--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.20.0",
+    "cross-fetch": "^3.1.5",
     "effector": "^22.7.0",
     "effector-react": "^22.5.1",
     "lodash": "^4.17.21",
